# data-analysis-strand-research

./: .gitignore  LICENSE  README.md  install_and_run_hairmech.bat  install_and_run_hairmech.command  pyproject.toml
assets/: mc_order_drag.css  mc_order_drag.js
src/hairmech/: __init__.py  analysis.py  cli.py  config.py  dimensional.py  dimensioncleaning.py  plots.py  tensile.py  util.py
src/hairmech/io/: config.py  export.py
src/hairmech/ui/: __init__.py  app.py  excel.py  multi_cassette.py
src/hairmech/ui/assets/: style.css  styles.css
tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_dimensional.py  test_dimensioncleaning.py  test_export.py  test_multi_cassette.py  test_rebalance.py  test_tensile.py  test_tensile_cleaning.py  test_ui.py  test_ui_app.py  test_util.py
tests/fixtures/demo_exp/: Dimensional_Data.txt  Tensile_Data.txt  config.yml
tests/fixtures/demo_exp/results/: metrics.xlsx  overlay.html  stats.xlsx  violin_grid.html
