# ─────────────────────────  pyproject.toml  ──────────────────────────
[tool.poetry]
name        = "hairmech"
version     = "0.3.0"
description = "Hair-mechanics analysis & visualisation toolkit"
authors     = ["Cathal Tuohy <cathal.tuohydubb@gmail.com>"]

packages = [
  { include = "hairmech", from = "src" }
]

# ------------------------ core runtime deps --------------------------
[tool.poetry.dependencies]
python     = "^3.11"
pandas     = "^2.2"
numpy      = "^2.3"
plotly     = "^5.24"
kaleido    = "^0.2"
dash       = "^2.18"           # core Dash runtime (no testing extras)
dash-bootstrap-components = "^1.6"
xlsxwriter = "^3.2"
click      = "^8.1"
matplotlib = "^3.9"
scipy      = "^1.13"
pyyaml     = "^6.0.2"
urllib3 = "<2"      
selenium = "<4.34"   

# --------------------- optional UI/visual deps -----------------------
[tool.poetry.group.ui]
optional = true                # let users skip with `poetry install --without ui`

[tool.poetry.group.ui.dependencies]
dash-bootstrap-components = "^1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff   = "^0.4"
black  = "^24.4"
webdriver-manager = "^4.0"

# pulls in dash.testing and its helpers (selenium, psutil, multiprocess …)
dash   = { version = "^2.18", extras = ["testing"] }

# --- new ---
chromedriver-binary = "*"   # ships the driver that matches your Chrome

# ----------------------- console entry point -------------------------
[tool.poetry.scripts]
hairmech = "hairmech.cli:main"
